# mysql-ndb-operator

./: .dockerignore  .gitignore  .gitreview  CONTRIBUTING.md  DEVELOPER.md  LICENSE  Makefile  README.md  README.txt  SECURITY.md  VERSION  go.mod  go.sum  index.yaml  ndb-operator-0.1.0.tgz  ndb-operator-0.2.0.tgz  ndb-operator-0.3.0.tgz  ndb-operator-0.3.1.tgz  ndb-operator-1.0.0.tgz  ndb-operator-1.0.1.tgz  ndb-operator-1.0.10.tgz  ndb-operator-1.0.11.tgz  ndb-operator-1.0.13.tgz  ndb-operator-1.0.14.tgz  ndb-operator-1.0.15.tgz  ndb-operator-1.0.2.tgz  ndb-operator-1.0.3.tgz  ndb-operator-1.0.4.tgz  ndb-operator-1.0.5.tgz  ndb-operator-1.0.6.tgz  ndb-operator-1.0.7.tgz  ndb-operator-1.0.8.tgz  ndb-operator-1.0.9.tgz  ndb-operator-1.1.0.tgz  ndb-operator-1.10.0.tgz  ndb-operator-1.11.0.tgz  ndb-operator-1.12.0.tgz  ndb-operator-1.2.0.tgz  ndb-operator-1.3.0.tgz  ndb-operator-1.4.0.tgz  (+14 more)
config/: flags.go  version.go
docker/: Dockerfile  docker-entrypoint.sh
docs/: NdbCluster-CRD.md  NdbPodSpec-doc.md  connect-from-inside-k8s-demo.md  connect-from-outside-k8s-demo.md  getting-started.md  notes.md
e2e/: README.md  basic_test.go  ndb_basic_suite.go  run-kubetest.go  run-kubetest.sh
e2e-tests/: README.md  run-e2e-test.go
hack/: build-cluster-container-image.sh  build.sh  dashboard.sh  generate-manifests.sh  ndb-boilerplate.go.txt  prettify-yaml.go  switch-k8-version.sh  tools.go  update-codegen.sh  verify-codegen.sh
helm/: Chart.yaml  README.md  values.yaml
manifests/: mysql.oracle.com_ndbs.yaml
pkg/ndb/ndbinfo/: CMakeLists.txt  ndbinfo_native.hpp
(+340 files in other folders)
